--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,29 +30,31 @@ jobs:
         with:
           python-version: '3.11'
 
-      # Step 3: Install Poetry and cache dependencies in one go.
-      # This single action replaces the manual install, cache setup, and dependency installation steps.
-      # It correctly handles the PATH and caching logic.
-      - name: Install Poetry and dependencies
+      # Step 3: Install Poetry.
+      # We use this action only to get the tool itself installed and configured correctly.
+      - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
           virtualenvs-create: true
           virtualenvs-in-project: true
-          installer-parallel: true
-          installation-arguments: "--with-dev"
 
-      # Step 4: Run Ruff to check formatting.
+      # Step 4: Install dependencies, including the 'dev' group.
+      # This is now a separate, explicit step for clarity and correctness.
+      # The --no-interaction flag is good practice for non-interactive CI environments.
+      # The --sync flag ensures the virtualenv matches the lock file exactly.
+      - name: Install dependencies
+        run: poetry install --with dev --no-interaction --sync
+
+      # Step 5: Run Ruff to check formatting.
       # The --check flag fails the build if code is not formatted, without changing files.
       - name: Check formatting with Ruff
         run: poetry run ruff format --check .
 
-      # Step 5: Run Ruff to lint for potential errors and style issues.
+      # Step 6: Run Ruff to lint for potential errors and style issues.
       - name: Lint with Ruff
         run: poetry run ruff check .
 
-      # Step 6: Run the actual tests with Pytest.
+      # Step 7: Run the actual tests with Pytest.
       - name: Run tests with Pytest
         run: poetry run pytest
-
-
 
