Refactored protocol and datastore for clear separation of concerns and correct parsing. servber.py now simply orchestrates by passing data and calling methods on each. Added an entrypoint main() function and added it to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ authors = ["Aleksa Vidovic <aleksavidovic8@gmail.com>"]
 readme = "README.md"
 packages = [{include = "cachica", from = "src"}]
 
+# Entry point
+[tool.poetry.scripts]
+cachica-server = "cachica.server:main"
+
 [tool.poetry.dependencies]
 python = ">=3.11"
 
