Implemented eviction protocol based on a random sample of keys that runs on a fixed time interval.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "cachica", from = "src"}]
 # Entry point
 [tool.poetry.scripts]
 cachica-server = "cachica.server:main"
+cachica-client = "cachica.client:main"
 
 [tool.poetry.dependencies]
 python = ">=3.11"
