--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ python = ">=3.11"
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.12.12"
 pytest = "^8.4.2"
+numpy = "^2.3.3"
+snakeviz = "^2.2.2"
 
 [build-system]
 requires = ["poetry-core"]
